syntax = "proto3";

package lab.reaction;

import "lab/common/common_types.proto";

// ReactionLimitsService provides methods to manage user limits
service ReactionLimitsService {
  // SetLimit sets a limit for a user
  rpc SetLimit(SetLimitRequest) returns (SetLimitResponse);
  
  // GetLimits retrieves limits for a user
  rpc GetLimits(GetLimitsRequest) returns (GetLimitsResponse);
}

// Request for setting a user limit
message SetLimitRequest {
  string user_id = 1;
  int32 site_id = 2;
  lab.common.Money money = 3;
  int32 period_type = 4;
  int32 limit_type = 5;
}

// Response for setting a limit
message SetLimitResponse {
  bool success = 1;
  string message = 2;
}

// Request for getting user limits
message GetLimitsRequest {
  string user_id = 1;
  int32 site_id = 2;
  int32 period_type = 3; // Optional
}

// Response containing user limits
message GetLimitsResponse {
  repeated LimitModel limits = 1;
}

// Model representing a user limit
message LimitModel {
  string id = 1;
  string user_id = 2;
  int32 period_type = 3;
  lab.common.Money amount = 4;
  int32 limit_type = 5;
}
